syntax = "proto3";

package order;

option go_package = "./gen/go/order;order";

// protoc --go_out=./api/rpc --go-grpc_out=./api/rpc --proto_path=./api/rpc  order.proto

service StreamGreeter {
  // 创建订单
  rpc CreateOrder(OrderCreateRequest) returns (OrderCreateReply) {}

  // 获取用户订单列表
  rpc GetUserOrders(UserOrdersRequest) returns (UserOrdersReply) {}

  // 获取订单详情
  rpc GetOrderInfo(OrderInfoRequest) returns (OrderInfoReply) {}

  // 取消订单
  rpc CancelOrder(OrderCancelRequest) returns (CommonResponse) {}

  // 创建订单支付
  rpc OrderCreatePay(OrderPayCreateRequest) returns (OrderPayCreateReply) {}
}

// 请求和响应消息定义
message OrderCreateRequest {
  repeated int64 cart_item_ids = 1;
  int64 address_id = 2;
}

message OrderCreateReply {
  string order_no = 1;
}

message UserOrdersRequest {
  int64 user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message UserOrdersReply {
  string order_no = 1;
  string pay_tran_id = 2;
  int32 pay_type = 3;
  int32 bill_money = 4;
  int32 pay_money = 5;
  int32 pay_state = 6;
  int32 order_state = 7;
  int32 status = 8;
  Address address = 9;
  repeated Items items = 10;
  string create_at = 11;
}
message Address {
  string user_name = 1;
  string user_phone = 2;
  string province_name = 3;
  string city_name = 4;
  string region_name = 5;
  string detail_address = 6;
}
message Items{
  int64 commodity_id = 1;
  string commodity_name = 2;
  string commodity_img = 3;
  int32 commodity_selling_price = 4;
  int32 commodity_num = 5;
}


message OrderInfoRequest {
  string order_no = 1;
  int64 user_id = 2;
}

message OrderCancelRequest {
  string order_no = 1;
  int64 user_id = 2;
}

message OrderPayCreateRequest {
  string order_no = 1;
  int64 user_id = 2;
  string pay_type = 3;
}

message OrderPayCreateReply {
  string pay_id = 1;
  string pay_url = 2;
  string qr_code = 3;
  string app_pay_params = 4;
}

message OrderInfoReply {
  string order_no = 1;
  int32 status = 2;
  double total_amount = 3;
  double freight_amount = 4;
  double promotion_amount = 5;
  double payable_amount = 6;
  string pay_type = 7;
  string pay_time = 8;
  string delivery_time = 9;
  string receive_time = 10;
  string note = 11;
  string create_time = 12;
  OrderAddress address = 13;
  repeated OrderItem items = 14;
}

message OrderAddress {
  string receiver_name = 1;
  string receiver_mobile = 2;
  string province = 3;
  string city = 4;
  string district = 5;
  string detail_address = 6;
}

message OrderItem {
  int64 id = 1;
  string order_no = 2;
  int64 commodity_id = 3;
  string commodity_name = 4;
  string commodity_pic = 5;
  double price = 6;
  int32 quantity = 7;
  double subtotal = 8;
}

message PaginationInfo {
  int32 page = 1;
  int32 page_size = 2;
  int32 total_rows = 3;
  int32 total_pages = 4;
}

message CommonResponse {
  bool success = 1;
  string message = 2;
}